Conexão pelo construtor.

--- a/eCommerce/eCommerce.API/appsettings.Development.json
+++ b/eCommerce/eCommerce.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eCommerceDEVConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=eCommerceDEV;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
