--- a/eCommerce/eCommerce.API/appsettings.json
+++ b/eCommerce/eCommerce.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eCommercePRODConnection": "Server=IP_Servidor;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
